k8s/patient-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
      - name: patient-service
        image: lbsaksacr.azurecr.io/patient-service:latest
        ports:
        - containerPort: 3000
