k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /appointment(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: appointment-service
            port:
              number: 80
      - path: /patient(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: patient-service
            port:
              number: 80
